02. productivity chart implementation
